<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.iaz.filmesfamosos.models.MovieModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_play_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_play_trailer"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poster_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_play_circle_outline"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_play_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_play_circle_outline"
                    android:text="@string/play_trailer"
                    android:tint="@color/colorPrimary"
                    android:visibility="visible"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_turn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_play_trailer"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_turn_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poster_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_star_border"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_turn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_play_circle_outline"
                    android:text="@string/turn_favorite"
                    android:tint="@color/colorPrimary"
                    android:visibility="visible"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@{movie.title}"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />


            <TextView
                android:id="@+id/tv_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@{movie.overview}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_turn_favorite" />


            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/average_rating"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{movie.vote_average}"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_rating">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/release_date"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{movie.release_date}"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/ll_release_date"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <LinearLayout
                android:id="@+id/ll_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reviews"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>